<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                app:srcCompat="@drawable/school" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView16"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="7dp"
                android:layout_centerHorizontal="true"
                android:text="@string/sch_xovrino"
                android:textAlignment="center"
                android:textSize="27sp" />



            <Button
                android:id="@+id/button2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button_white"
                android:layout_below="@+id/cd1"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:text="@string/back" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_margin="7dp"
                android:id="@+id/cd1"
                android:elevation="@dimen/elevation"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/textsch1590"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/wait"/>
                        <!--android:text="Школа №159 решением исполкома Ленинградского района открылась 26 февраля 1969 года. Приказом Департамента образования города Москвы от 31 мая 2007 года №459/ак Государственное образовательное учреждение средняя общеобразовательная школа №159 переименованна в Государственное образовательное учреждение города Москвы гимназию №1590. 18 октября 2013 г. гимназия реорганизована путём слияния с ГБОУ СОШ № 1112 им. Героя Советского Союза В.В. Колесника, ДОУ № 690, ДОУ № 174, ДОУ № 1882, ДОУ № 430 и образовано новое образовательное учреждение ГБОУ гимназия № 1590 им. Героя Советского Союза В.В. Колесника." -->



                    <ImageView
                        android:id="@+id/imageView17"
                        android:layout_width="wrap_content"
                        android:layout_height="220dp"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/sch1474" />

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/textsch1474name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/sch1474"
                        android:textSize="20sp" />

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/textsch1474"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/wait"/>/>
                        <!--android:text="\nПрогуливаясь по улице Петрозаводская, можно увидеть шесть школьных зданий, объединенных в школьное учреждение №1474. Здания являются примером истории развития архитектуры школьных строений. Здесь пятиэтажные здания 50-ых, 3-ёх этажный “вертолётик” конца 70-ых, и современные здания со стеклянными куполами и надземными садами."-->
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>