<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                app:srcCompat="@drawable/xram" />

            <RelativeLayout
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/imageView16"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/r3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="7dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="7dp"
                    android:text="Храм иконы Божьей"
                    android:textAlignment="center"
                    android:textSize="27sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/r3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="7dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="7dp"
                    android:text="матери знамения в Ховрино"
                    android:textAlignment="center"
                    android:textSize="27sp" />
            </RelativeLayout>


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cd1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/on_map"
                android:textAlignment="center"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8"
                android:layout_centerHorizontal="true"
                android:text="@string/koordinatsXramXovrino"
                android:textAlignment="center"
                android:textStyle="italic" />

            <Button
                android:id="@+id/button2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView9"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@drawable/button_white"
                android:text="@string/back"
                android:textColor="#000000" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_margin="7dp"
                android:elevation="@dimen/elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/tv7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView132"
                        android:layout_width="wrap_content"
                        android:layout_height="220dp"

                        app:srcCompat="@drawable/insidexram" />

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/tv8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="20sp" />
                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/tv12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Вируальный тур в Храм нажми сюда"
                        android:textSize="20sp" />
                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/tv13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Более подробно здесь"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </RelativeLayout>
    </ScrollView>
</LinearLayout>